--- a/mddf-lib/pom.xml
+++ b/mddf-lib/pom.xml
@@ -10,7 +10,7 @@
 	<url>https://github.com/MovieLabs/mddf</url>
 	<properties>
 		<mddf.lib.version>${project.version}</mddf.lib.version>
-		<mddf.lib.build>3</mddf.lib.build>
+		<mddf.lib.build>4</mddf.lib.build>
 		<mddf.lib.timestamp>${maven.build.timestamp}</mddf.lib.timestamp>
 		<maven.build.timestamp.format>yyyy-MMM-dd HH:mm:ss z</maven.build.timestamp.format>
 	</properties>
@@ -213,6 +213,7 @@
 		<resources>
 			<resource>
 				<directory>src</directory>
+				<filtering>true</filtering>
 				<excludes>
 					<exclude>**/*.java</exclude>
 				</excludes>
@@ -234,22 +235,6 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>properties-maven-plugin</artifactId>
-				<version>1.0.0</version>
-				<executions>
-					<execution>
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>write-project-properties</goal>
-						</goals>
-						<configuration>
-							<outputFile>${project.build.outputDirectory}/com/movielabs/mddflib/build.properties</outputFile>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
